--- a/hu-aix-73.adoc
+++ b/hu-aix-73.adoc
@@ -191,3 +191,5 @@ include::_include/hu/aix-asa-aff-fas-examples.adoc[]
 There are no known issues.
 
 include::_include/hu/aix-command-reference-whats-next.adoc[]
+
+// 2025 MAY 20, ONTAPDOC-2878 and ONTAPDOC-2365 
