--- a/hu-aix-release-notes.adoc
+++ b/hu-aix-release-notes.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-aix-rn.html
+permalink: hu-aix-release-notes.html
 keywords: host utilities, aix, 6.1 netapp, 7.0, ontap, powervm
 summary: Release Notes for AIX Host Utilities 6.1
 ---
@@ -50,3 +50,5 @@ link:https://mysupport.netapp.com/site/[NetApp Bugs Online^] provides complete i
 
 *	FCP General: Displays FC and HBA bugs that are not associated with a specific host.
 *	FCP - AIX
+
+// 2025 MAY 20, ONTAPDOC-2878 and ONTAPDOC-2365 
