--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -79,10 +79,4 @@ sanlun version
 sanlun version 7.1.386.1644
 ----
 
-== What's next?
-
-* Use the recommended driver settings with Linux kernel:
-+
-When you configure an FC environment that uses native inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers.
-
-* link:hu-luhu-san-toolkit.html[Learn about the Linux SAN Toolkit].
+include::_include/hu/linux-install-hu-whats-next.adoc[]
