--- a/hu-aix-80.adoc
+++ b/hu-aix-80.adoc
@@ -13,9 +13,9 @@ summary: The AIX Host Utilities assists you to manage ONTAP storage attached to 
 :imagesdir: ./media/
 
 [.lead]
-The AIX Host Utilities help you manage ONTAP storage attached to an AIX host and assist technical support with gathering configuration data. 
+include::_include/hu/aix-install-hu-introduction.adoc[] 
 
-The AIX Host Utilities support the following transport protocols and AIX environments.
+AIX Host Utilities 8.0 supports the following transport protocols and AIX environments.
 
 * FC, FCoE, and iSCSI 
 * AIX Multipath I/O (MPIO) (Native OS)
