Add version 7.0 to tabs for command examples

--- a/hu-aix-command-reference.adoc
+++ b/hu-aix-command-reference.adoc
@@ -70,9 +70,9 @@ bash-3.2#
 ----
 ====
 --
-.6.1
+.7.0 and 6.1
 --
-.Show example for AIX Host Utilities 6.1
+.Show example for AIX Host Utilities 7.0 and 6.1
 [%collapsible]
 ====
 ----
@@ -152,10 +152,10 @@ up     secondary path3   fcs1    fc_aix_4     1
 ====
 --
 
-.6.1
+.7.0 and 6.1
 --
 
-.Show example for AIX Host Utilities 6.1
+.Show example for AIX Host Utilities 7.0 and 6.1
 [%collapsible]
 ====
 ----
@@ -215,10 +215,10 @@ up      secondary  path3 fcs1    sanboot_4   1
 ----
 ====
 --
-.6.1
+.7.0 and 6.1
 --
 
-.Show example for AIX Host Utilities 6.1
+.Show example for AIX Host Utilities 7.0 and 6.1
 [%collapsible]
 ====
 ----
@@ -280,10 +280,10 @@ up       secondary path3 fcs1    fc_aix_4   1
 ====
 --
 
-.6.1
+.7.0 and 6.1
 --
 
-.Show example for AIX Host Utilities 6.1
+.Show example for AIX Host Utilities 7.0 and 6.1
 [%collapsible]
 ====
 ----
@@ -338,10 +338,10 @@ hdisk1    fcs0    FCP     15g  C
 ====
 --
 
-.6.1
+.7.0 and 6.1
 --
 
-.Show example for AIX Host Utilities 6.1
+.Show example for AIX Host Utilities 7.0 and 6.1
 [%collapsible]
 ====
 ----
@@ -395,10 +395,10 @@ hdisk12      fcs0       15g    C
 ====
 --
 
-.6.1
+.7.0 and 6.1
 --
 
-.Show example for AIX Host Utilities 6.1
+.Show example for AIX Host Utilities 7.0 and 6.1
 [%collapsible]
 ====
 -----
