Create include file for before you begin

--- a/_include/hu/aix-install-hu-introduction.adoc
+++ b/_include/hu/aix-install-hu-introduction.adoc
@@ -1,1 +1,1 @@
-The AIX Host Utilities help you manage ONTAP storage attached to an AIX host. When you install the AIX Host Utilities, they don't change any settings on your AIX host. NetApp strongly recommends installing the AIX Host Utilities to improve ONTAP storage management and assist NetApp support in gathering information about your configuration.
+The AIX Host Utilities help you manage ONTAP storage attached to an AIX host. NetApp strongly recommends installing the AIX Host Utilities to improve ONTAP storage management and assist NetApp support in gathering information about your configuration.
