--- a/hu-aix-80.adoc
+++ b/hu-aix-80.adoc
@@ -23,9 +23,7 @@ AIX Host Utilities 8.0 supports the following transport protocols and AIX enviro
 +
 For information about PowerVM, see the IBM PowerVM Live Partition Mobility Red Book.
 
-.About this task
-* You download the AIX Host Utilities from the NetApp Support site in a compressed `tar.gz` file.
-* You need to install the AIX Host Utilities kit with AIX MPIO to manage ONTAP storage attached to an AIX host.
+include::_include/hu/aix-install-hu-about-this-task.adoc[]
 
 .Before you begin
 
