--- a/hu-luhu-sanlun-utility.adoc
+++ b/hu-luhu-sanlun-utility.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-luhu-san-toolkit.html
+permalink: hu-luhu-sanlun-utility.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
 ---
