--- a/_include/hu/linux-install-hu-whats-next.adoc
+++ b/_include/hu/linux-install-hu-whats-next.adoc
@@ -4,4 +4,4 @@
 +
 When you configure an FC environment that uses native inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers.
 
-* link:hu-luhu-san-toolkit.html[Learn about the Linux "sanlun" utility].
+* link:hu-luhu-sanlun-utility.html[Learn about the Linux "sanlun" utility].
