--- a/hu-luhu-sanlun-utility.adoc
+++ b/hu-luhu-sanlun-utility.adoc
@@ -33,20 +33,20 @@ data_vserver          /vol/vol2/lun2   /dev/sde   host15   FCP       120.0g  cDO
 
 [NOTE] 
 =====
-* For Linux Host Utilities 7.0, the "sanlun" utility is common across all configurations and protocols of the Host Utilities. As a result, some of its contents apply to one configuration, but not another. Having unused components doesn't affect your system performance. 
+* For Linux Host Utilities 7.1, the "sanlun" utility is common across all configurations and protocols of the Host Utilities. As a result, some of its contents apply to one configuration, but not another. Having unused components doesn't affect your system performance. 
 
-* The "sanlun" utility isn't supported for the following distribution types:
+* The "sanlun" utility isn't supported for the following hypervisor types:
 +
 [role="tabbed-block"]
 ====
 .8.0
 --
-For Linux Host Utilities 8.0, the "sanlun" utility isn't supported for Citrix XenServer, Oracle VM, and Red Hat Enterprise Virtualization Hypervisor.
+For Linux Host Utilities 8.0, the "sanlun" utility isn't supported for Citrix XenServer, Oracle VM, and Red Hat Enterprise Virtualization.
 --
 
 .7.1
 --
-For Linux Host Utilities 7.1, the "sanlun" utility isn't supported for Citrix XenServer, Oracle VM, and Red Hat Enterprise Virtualization Hypervisor.
+For Linux Host Utilities 7.1, the "sanlun" utility isn't supported for Citrix Xenserver, Red hat Enterprise Virtualization, and Proxmox.
 --
 ====
 =====
