--- a/hu-wuhu-80.adoc
+++ b/hu-wuhu-80.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu_wuhu_72.html
+permalink: hu-wuhu-80.html
 keywords: windows, 7.2, host utilities, SAN, windows
 summary: Windows Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for ONTAP and E-Series platforms.
 ---
-= Install Windows Host Utilities 7.2 for ONTAP storage
+= Install Windows Host Utilities 8.0 for ONTAP storage
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -15,29 +15,22 @@ summary: Windows Host Utilities includes an installation program that sets the r
 [.lead]
 The Windows Host Utilities enable you to connect a Windows host computer to NetApp storage systems.
 
-[[supported-windows-versions-72]]
+[[supported-windows-versions-80]]
 The Windows Host Utilities support the following versions of Windows:
 
 * Windows 2025
 * Windows 2022
 * Windows 2019
 * Windows 2016
-* Windows 2012R2
-* Windows 2012
 
 include::_include/windows/windows-install-chunk-a.adoc[]
-
 |===
 |Program |Purpose
 
-|`emulexhba.reg`
-|Troubleshooting program; run this program only if instructed to do so by technical support personnel.
 | `\NetAppQCLI\fcconfig.exe`
 |Used by the installation program to set the HBA parameters.
 | `\NetAppQCLI\fcconfig.ini`
 |Used by the installation program to set the HBA parameters.
-|`\NetAppQCLI\*.*`
-|Used by the installation program to set the QLogic FC HBA parameters.
 |`san_version.exe`
 |Displays the version of the Host Utilities and FC HBAs.
 |===
@@ -47,7 +40,7 @@ The Host Utilities support different Windows host configurations, protocols, and
 
 == Step 1: Verify your host and storage system configuration
 
-Verify that your host and storage system configuration are supported before you install Windows Host Utilities for the <<supported-windows-versions-72,supported Windows version>>.
+Verify that your host and storage system configuration are supported before you install Windows Host Utilities for the <<supported-windows-versions-80,supported Windows version>>.
 
 .Steps
 
@@ -58,22 +51,19 @@ Verify that your host and storage system configuration are supported before you 
 The link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Use Windows server 2022 with ONTAP] document provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
 
 . Add the iSCSI, FCP, or NVMe-oF license and start the target service.
-+
-[NOTE]
-The FC and iSCSI protocols do not require licenses on E-Series storage systems using the SANtricity Storage Manager.
 
 . Verify your cabling.
 +
 See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for your version of ONTAP or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] for detailed cabling and configuration information.
 
-== Configure FC HBAs and switches
+== Step 2: Configure FC HBAs and switches
 
 Install and configure one or more supported FC host bus adapters (HBAs) for FC connections to the storage system.
 
 The Windows Host Utilities installer sets the required FC HBA settings.
 
 [CAUTION]
-Do not change the HBA settings manually.
+Don't change the HBA settings manually.
 
 .Steps
 
@@ -91,9 +81,7 @@ include::_include/windows/windows-install-host-utilities.adoc[]
 .Install interactively
 --
 
-To install the Host Utilities software package interactively, you must run the Host Utilities installation program and follow the prompts.
-
-.Steps
+Install the Windows Host Utilities software package interactively by running the installation program and following the prompts.
 
 . Download the executable file from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.2/downloads[NetApp Support Site^].
 . Change to the directory where you downloaded the executable file.
@@ -104,9 +92,8 @@ To install the Host Utilities software package interactively, you must run the H
 .Install from a command line
 --
 
-You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at the Windows command prompt. The system automatically reboots when the installation is complete.
+Perform a quiet (unattended) installation of the Windows Host Utilities by entering the appropriate commands at the Windows command prompt. The system automatically reboots when the installation is complete.
 
-.Steps
 
 . Enter the following command at the Windows command prompt:
 +
