--- a/hu_wuhu_repair_remove.adoc
+++ b/hu_wuhu_repair_remove.adoc
@@ -14,7 +14,7 @@ summary: Windows Host Utilities includes an installation program that sets the r
 :imagesdir: ./media/
 
 [.lead]
-You can use the *Repair* option of the Host Utilities installation program to update the Host bus adapter (HBA) and Windows registry settings. You can also remove the Host Utilities entirely, either interactively or from the Windows command line.
+Use the *Repair* option in the Host Utilities installation program to update the Host bus adapter (HBA) and Windows registry settings. You can also remove the Host Utilities entirely, either interactively or from the Windows command line.
 
 [role="tabbed-block"]
 ====
